# one-data-studio

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  QUICKSTART.md  README.md  README_ZH.md  coverage.xml  docker-compose.yml  package-lock.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements-test.txt  run-dataops-e2e.sh  test-results.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: cd.yml  (+3 more)
deploy/: README.md
docs/: CHANGELOG.md  CODE_STRUCTURE.md  CONTRIB.md  ENVIRONMENT.md  FEATURES-2.md  FEATURES.md  PROJECT_STATUS.md  README.md  RUNBOOK.md  SECURITY.md  TECH_DEBT.md  implementation-plan.md  智能大数据平台建设内容v2.txt
memory/: MEMORY.md
scripts/: README.md  clean.sh  create_comprehensive_test_data.py  create_linked_data.py  create_test_data.py  deploy-phase1.sh  deploy-phase2.sh  disaster-recovery.sh  export_test_data.py  init-demo-data.py  insert_test_data.py  insert_test_data_final.py  install-kind.sh  migrate_bi_to_superset.py  port-forward.sh  quick_insert_test_data.py  rotate-encryption-keys.sh  rotate-secrets.sh  run-live-validation.sh  seed.py  test-all.sh  test-dataops-full-flow.py  test-e2e.sh
services/: image_processor.py
tests/: README.md  conftest.py  run_tests.py  run_tests.sh  test_report_config.py
web/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.strict.json  vite.config.ts  vitest.config.ts
(+1973 files in other folders)
